--- a/cars/src/Components/Card/Card.scss
+++ b/cars/src/Components/Card/Card.scss
@@ -1,17 +1,30 @@
+.cardWrapper{
+    display: float;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
 .card{
-    display: flex;
-    flex-direction: column;
-    border: 2px solid purple;
+    
+    background-color: white;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.11), 
+    0 2px 2px rgba(0,0,0,0.11), 
+    0 4px 4px rgba(0,0,0,0.11), 
+    0 8px 8px rgba(0,0,0,0.11), 
+    0 16px 16px rgba(0,0,0,0.11), 
+    0 32px 32px rgba(0,0,0,0.11);
     width: 25%;
     h1{
-        font-size: 1.6rem;
+        color: rgb(21, 78, 104);
+        font-weight: bold;
+        font-size: 1.5rem;
     }
 
     p{
         font-size: 1rem;
     }
     align-items: center;
-    margin: 2% 0;
+    margin: auto;
 }
 
 a{
