--- a/cars/src/Components/Card/Card.scss
+++ b/cars/src/Components/Card/Card.scss
@@ -1,11 +1,8 @@
-.cardWrapper{
-    display: float;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
+
 
 .card{
-    
+    display: flex;
+    flex-direction: column;
     background-color: white;
     box-shadow: 0 1px 1px rgba(0,0,0,0.11), 
     0 2px 2px rgba(0,0,0,0.11), 
@@ -13,7 +10,8 @@
     0 8px 8px rgba(0,0,0,0.11), 
     0 16px 16px rgba(0,0,0,0.11), 
     0 32px 32px rgba(0,0,0,0.11);
-    width: 25%;
+    border-radius: 10px;
+    padding: 2%;
     h1{
         color: rgb(21, 78, 104);
         font-weight: bold;
@@ -25,6 +23,10 @@
     }
     align-items: center;
     margin: auto;
+
+    img {
+        height: 60%;
+    }
 }
 
 a{
